--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "5dcac373-883f-44e2-81b1-f71fa454e379"
+      "id": "7f23bbfc-1c3f-4fb4-83bd-13519437b546"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "0ac1100a-01d2-4eb1-a9a8-e9a33152e088"
+      "id": "6da2ee59-34e1-4f42-aebc-717cae2743bb"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "dc479e60-7714-4464-8a4c-ffd91f094bc3"
+      "id": "742b2ad1-5dbc-4b09-9171-ff7b799711e1"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "4920bed0-205d-4c3d-981e-1f8a38d6aa6c"
+      "id": "c4b551d3-8a04-4b4b-8c5f-cf8a58680190"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "d1cb484b-d821-4146-9e31-b084041b86c6"
+      "id": "e9f5982c-e7cc-40da-b70b-3d90a32ef710"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "5b6da41e-3438-46a0-8114-ed3e3e6235fb"
+      "id": "797a0963-78f1-406d-935b-a516b53923fa"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "256c3f2a-fb64-4c18-8be2-3458806e9df9"
+      "id": "be7ed3ab-f0e8-4eaa-b704-da66fdc57d12"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "abfddb4d-239b-4f23-8123-4b20fef5d902"
+      "id": "0aeefec8-9a53-4543-8d47-cb77f12a7d59"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "8fcd2c4a-e93a-4f9f-b4d3-016c9e6e8367"
+      "id": "124cd975-e740-48f5-bac4-b4b037d777b7"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "79d2cec4-01e8-44e4-ad27-3f58888d41f3"
+      "id": "2a6a8fe8-83e7-4f4e-b1af-9fcb45cf2de6"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "da344271-5010-4934-8e00-5b7e0acf6cec"
+      "id": "8a754a80-dc3a-44ee-8dfc-ffb1f519ad6e"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "0e903551-aca5-4a45-b7df-c19bd0525e4c"
+      "id": "670b0943-9423-4b63-a484-d395469db539"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "bb03699b-c879-4c21-847b-edbfb362f2b5"
+      "id": "c1d79606-28bb-41e3-b742-46af07760a84"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "97e8d119-4df1-4e6c-8ace-f5a45a3e5a96"
+      "id": "4d94d016-9355-4e0d-87d6-2ba61f98dfe0"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "a80b444f-708a-4fb1-8eda-8e4028de6fc9"
+      "id": "cbba4252-5c1a-49c1-b39d-9ed30c20c09d"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "9ae6dc59-be3b-4772-9fbd-97b3acbc6361"
+      "id": "161e65c1-5e99-4d69-a589-d84965c10b62"
     },
     {
       "cell_type": "code",
