--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 10wk-2: 추천시스템 (1) – optimizer 사용 고급, 추천시스템의 학습\n",
+        "# 10wk-2: 추천시스템 (1) – optimizer 사용 고급, MF-based 추천시스템의\n",
+        "\n",
+        "학습\n",
         "\n",
         "최규빈  \n",
         "2024-05-08\n",
@@ -17,7 +19,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "059af977-980f-4e48-b8ec-620d19b7c866"
+      "id": "589b689d-c6d5-4ebc-be1c-af2e07a76f1b"
     },
     {
       "cell_type": "code",
@@ -41,7 +43,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "4c4026ff-109b-4f50-9259-d1c93f49a3da"
+      "id": "61771b14-44f3-4842-be66-861d039c1494"
     },
     {
       "cell_type": "code",
@@ -87,7 +89,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "5270775d-5cfc-48cc-ab2e-87c092cd8a55"
+      "id": "6c1bdfe8-d340-40c8-9739-df207a13c306"
     },
     {
       "cell_type": "code",
@@ -129,7 +131,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "3d7fb654-6552-47da-af4d-8adec452a1ea"
+      "id": "3206c21f-058b-4e5c-82c4-e17b07966e81"
     },
     {
       "cell_type": "code",
@@ -183,7 +185,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "efd6b1cf-9559-4a75-87f2-ed40649d0aac"
+      "id": "266c0156-1f3a-4cc0-aa9b-9243fab05ce8"
     },
     {
       "cell_type": "code",
@@ -226,7 +228,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "0b1c1407-6d5a-442f-93b4-3f13bdd06ed6"
+      "id": "826c1712-5208-4ad7-88f7-ae4c053f068e"
     },
     {
       "cell_type": "code",
@@ -278,7 +280,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 4. 추천시스템의 학습전략\n",
+        "# 4. MF-based 추천시스템\n",
         "\n",
         "ref: <https://namu.wiki/w/나는%20SOLO>\n",
         "\n",
@@ -286,7 +288,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "1ea7c4ad-56ba-4193-9939-e91f768564f0"
+      "id": "0725c842-d110-4a45-aa01-779e68cf0118"
     },
     {
       "cell_type": "code",
@@ -339,7 +341,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "3fc1b2d3-db72-488d-958e-651159317d02"
+      "id": "8a12a8dd-78c3-466e-9325-24575a807902"
     },
     {
       "cell_type": "code",
@@ -365,7 +367,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "af57755b-c44e-4c1b-b62e-beec56c91ca5"
+      "id": "214a1554-6453-4658-bc3d-cc354c451491"
     },
     {
       "cell_type": "code",
@@ -391,7 +393,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "da377ce8-a5a4-4c4a-9fdd-4215c2c63d75"
+      "id": "29eacbf5-1ed1-45f2-9a4e-86df00d08c24"
     },
     {
       "cell_type": "code",
@@ -418,7 +420,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "479332f1-f77f-4ee9-8fa3-3dba382bd4ca"
+      "id": "8738ee37-1a1a-4b93-bfb9-3ed29b50fcc2"
     },
     {
       "cell_type": "code",
@@ -471,7 +473,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "25479255-2219-4488-957a-a2d1b7e73bce"
+      "id": "8cb57e5a-c9cf-47c0-a315-f824d875f006"
     },
     {
       "cell_type": "code",
@@ -491,71 +493,15 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix}\n",
-        "1.2200 & 0.4900 \\\\\n",
-        "1.1700 & 0.4400 \\\\\n",
-        "1.2100 & -0.4500 \\\\\n",
-        "1.2000 & -0.5000 \\\\\n",
-        "-1.2000 & 0.5100 \\\\\n",
-        "-1.2300 & 0.4800 \\\\\n",
-        "-1.2000 & -0.4800 \\\\\n",
-        "-1.1900 & -0.4900 \\\\\n",
-        "0.2000 & 0.0000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
-        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
-        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
-        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
-        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
-        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
-        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
-        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
-        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
-        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
-        "1.2100 \\\\\n",
-        "1.2500 \\\\\n",
-        "1.1000 \\\\\n",
-        "1.1100 \\\\\n",
-        "1.1200 \\\\\n",
-        "1.1300 \\\\\n",
-        "1.1400 \\\\\n",
-        "1.1200 \\\\\n",
-        "3.6000\n",
-        "\\end{bmatrix} +\\begin{bmatrix}\n",
-        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
-        "\\end{bmatrix}\\\\ \\\\\n",
-        "=~& \\begin{bmatrix}\n",
-        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
-        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
-        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
-        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
-        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
-        "\\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
-        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
-        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
-        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
-        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
-        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
-        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
-        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
-        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
-        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -572,7 +518,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "298c40aa-b9d0-4f57-bba0-8c1315896abc"
+      "id": "f4626002-1d85-4909-a73c-b47913126cb9"
     },
     {
       "cell_type": "code",
@@ -692,7 +638,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "9ccf2646-e62e-4df9-ac8b-973f6bd6cf21"
+      "id": "ef9a1c4b-0636-4f8b-9239-b5a1773f8373"
     },
     {
       "cell_type": "code",
@@ -713,7 +659,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "c4485798-3afc-4cef-aa38-1fe2a29651cd"
+      "id": "216d8a0d-27fe-425b-82dd-542ca120a756"
     },
     {
       "cell_type": "code",
@@ -748,7 +694,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "d68c696b-fb3a-4bee-a606-9dbe62e9cb2d"
+      "id": "094d1e7d-9fb4-4fb1-9233-cc130e0bbdb8"
     },
     {
       "cell_type": "code",
@@ -800,7 +746,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "45e88a3a-2eed-4eca-a9f2-33959e2b54ed"
+      "id": "a493b168-df93-41b6-ab1b-6606543d5b3d"
     },
     {
       "cell_type": "code",
@@ -825,7 +771,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "ada7e4ad-819e-4b35-893f-d276bd1756a5"
+      "id": "8f81aff3-945d-4dd4-96fa-f3330aa0152e"
     },
     {
       "cell_type": "code",
@@ -867,7 +813,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "7d04da71-f270-441c-a21b-9ae33193caf7"
+      "id": "5290e269-60bc-43c8-808b-d1f1804d8e3f"
     },
     {
       "cell_type": "code",
@@ -890,7 +836,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "c681ac00-2497-45cf-a0b1-aef02fef3f32"
+      "id": "d09ac906-ac92-4b86-91b9-16d8721c9e63"
     },
     {
       "cell_type": "code",
@@ -922,7 +868,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "481e18c5-8d5d-4d70-a1d2-73fa0bb14760"
+      "id": "7511e1d7-c54b-4135-bb8e-705e5a33998d"
     },
     {
       "cell_type": "code",
@@ -942,7 +888,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "81fbaede-1bd4-41e5-8ffc-874fed8bbe15"
+      "id": "89e0ed9a-1850-484e-a077-f551543ef1e5"
     },
     {
       "cell_type": "code",
@@ -976,7 +922,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "93356fb1-fd5b-417d-8a80-7891b2eba8fb"
+      "id": "7fa0d94e-27da-4ddb-9e2c-4e3718060205"
     },
     {
       "cell_type": "code",
@@ -997,7 +943,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "0f93fca9-697d-4808-bd97-6b4054937ac5"
+      "id": "620cbbaf-2661-4b51-99c7-48d597d69980"
     },
     {
       "cell_type": "code",
@@ -1029,7 +975,7 @@
       "source": [
         "(update)"
       ],
-      "id": "eebabe78-1d05-4cbc-bd42-d266ceb07bfe"
+      "id": "a57f2f16-4fb0-4249-a4f3-05c663670d3d"
     },
     {
       "cell_type": "code",
@@ -1049,7 +995,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "ef44b578-5ce2-4226-bc50-39e0fa93ee27"
+      "id": "abeca98e-e8ad-419f-95b6-65f0f689be4a"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1027,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "0e56add7-6ae2-4299-af01-24b86881e093"
+      "id": "92e55df4-09ed-4dcc-b893-073789e766b9"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1047,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "292afc4a-db80-4e3a-ac1d-5e53bc5a481a"
+      "id": "d2071d9a-21b0-488d-a4e3-3e71e167077d"
     },
     {
       "cell_type": "code",
@@ -1133,7 +1079,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "ff450a12-c23c-4edd-8c71-034e0542671b"
+      "id": "0d125631-78ce-4434-8214-07a99c2787e7"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1145,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "a920ce94-d9b8-4f30-ae94-3809f53c89a1"
+      "id": "278b47b7-58a5-468e-b6b0-bf0edde6c9fe"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1182,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "78bcc3ac-0e38-43b5-98e4-b892f80f4380"
+      "id": "3ad961ac-aa00-47c2-9ca6-19351008c904"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1236,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "7a3bcf64-4cef-45dc-926b-f2201df2bf57"
+      "id": "85cfb6f2-e0ec-4499-abbe-b5c3c4c3829f"
     },
     {
       "cell_type": "code",
@@ -1310,7 +1256,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "2ae78e0f-509d-4e3c-8489-ec17d6721ba4"
+      "id": "cb2b3c9e-821d-4e0b-9862-16c799ecafa2"
     },
     {
       "cell_type": "code",
@@ -1350,7 +1296,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "1f5a9832-e024-4704-82ba-6840bdeaca16"
+      "id": "78735c6e-cb31-4f83-9679-54b27b50dac1"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1320,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "724dbfd4-b71e-4464-936f-1765f6dfc2fc"
+      "id": "e47c68d5-c8aa-4858-a225-830a4716032f"
     },
     {
       "cell_type": "code",
@@ -1428,7 +1374,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "74ee174e-0316-45eb-a5bf-f26cdd9c89de"
+      "id": "b8db5c54-365c-4325-822d-07637a061eb0"
     },
     {
       "cell_type": "code",
@@ -1449,7 +1395,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "9b0b6cd4-a768-4537-9d50-50c334476381"
+      "id": "38eb859a-eb30-4231-ba45-6539c5b44594"
     },
     {
       "cell_type": "code",
