--- a/posts/ref.bib
+++ b/posts/ref.bib
@@ -54,3 +54,11 @@
   year={2016},
   publisher={MIT press}
 }
+
+@inproceedings{he2017neural,
+  title={Neural collaborative filtering},
+  author={He, Xiangnan and Liao, Lizi and Zhang, Hanwang and Nie, Liqiang and Hu, Xia and Chua, Tat-Seng},
+  booktitle={Proceedings of the 26th international conference on world wide web},
+  pages={173--182},
+  year={2017}
+}
