--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -4,9 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 10wk-2: 추천시스템 (1) – optimizer 사용 고급, MF-based 추천시스템의\n",
-        "\n",
-        "학습\n",
+        "# 10wk-2: 추천시스템 (1) – optimizer 사용 고급, MF-based 추천시스템\n",
         "\n",
         "최규빈  \n",
         "2024-05-08\n",
@@ -19,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "589b689d-c6d5-4ebc-be1c-af2e07a76f1b"
+      "id": "07e37349-734b-4060-8bfc-4b5d7647384f"
     },
     {
       "cell_type": "code",
@@ -43,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "61771b14-44f3-4842-be66-861d039c1494"
+      "id": "8060b787-eb61-4aae-b5cd-06382dfa8e0b"
     },
     {
       "cell_type": "code",
@@ -89,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "6c1bdfe8-d340-40c8-9739-df207a13c306"
+      "id": "78c84428-7231-40a3-8934-e750d8ccda47"
     },
     {
       "cell_type": "code",
@@ -131,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "3206c21f-058b-4e5c-82c4-e17b07966e81"
+      "id": "f264d05e-7ada-41b1-a519-fcb17ab4c86f"
     },
     {
       "cell_type": "code",
@@ -185,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "266c0156-1f3a-4cc0-aa9b-9243fab05ce8"
+      "id": "ae1413dc-8500-4460-b4cd-5a2435f71b02"
     },
     {
       "cell_type": "code",
@@ -228,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "826c1712-5208-4ad7-88f7-ae4c053f068e"
+      "id": "c62bc671-e90a-46bd-bad8-2eb4f99079a3"
     },
     {
       "cell_type": "code",
@@ -288,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "0725c842-d110-4a45-aa01-779e68cf0118"
+      "id": "b18130b9-01d3-4e94-bc27-47af11c8356f"
     },
     {
       "cell_type": "code",
@@ -341,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "8a12a8dd-78c3-466e-9325-24575a807902"
+      "id": "2ef43249-aff5-4e15-9bf6-23161d601cb3"
     },
     {
       "cell_type": "code",
@@ -367,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "214a1554-6453-4658-bc3d-cc354c451491"
+      "id": "8457f4d4-393b-45d3-a045-6a0c40ba9b2d"
     },
     {
       "cell_type": "code",
@@ -393,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "29eacbf5-1ed1-45f2-9a4e-86df00d08c24"
+      "id": "95ec86e1-7785-4abd-8fc6-5d25665694d3"
     },
     {
       "cell_type": "code",
@@ -420,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "8738ee37-1a1a-4b93-bfb9-3ed29b50fcc2"
+      "id": "c2af5cb1-b994-4556-858c-559e378b344b"
     },
     {
       "cell_type": "code",
@@ -473,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "8cb57e5a-c9cf-47c0-a315-f824d875f006"
+      "id": "d7356b07-3311-4195-bab6-e1c5eba738cb"
     },
     {
       "cell_type": "code",
@@ -518,7 +516,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "f4626002-1d85-4909-a73c-b47913126cb9"
+      "id": "6f5a3696-f3fd-4693-a89a-d7c13bf4ac08"
     },
     {
       "cell_type": "code",
@@ -638,7 +636,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "ef9a1c4b-0636-4f8b-9239-b5a1773f8373"
+      "id": "693b3c79-344a-4293-944e-0563f62d17f2"
     },
     {
       "cell_type": "code",
@@ -659,7 +657,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "216d8a0d-27fe-425b-82dd-542ca120a756"
+      "id": "7bfec6e8-7848-4140-81d4-e6e065776b22"
     },
     {
       "cell_type": "code",
@@ -694,7 +692,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "094d1e7d-9fb4-4fb1-9233-cc130e0bbdb8"
+      "id": "7527cdef-d32b-472b-9583-e4e82a230e0f"
     },
     {
       "cell_type": "code",
@@ -746,7 +744,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "a493b168-df93-41b6-ab1b-6606543d5b3d"
+      "id": "1f3645be-e83b-409c-b0df-8275bf910351"
     },
     {
       "cell_type": "code",
@@ -771,7 +769,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "8f81aff3-945d-4dd4-96fa-f3330aa0152e"
+      "id": "b59112b4-ab8f-470b-82bc-6687ec92f516"
     },
     {
       "cell_type": "code",
@@ -813,7 +811,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "5290e269-60bc-43c8-808b-d1f1804d8e3f"
+      "id": "8f53f411-d4b2-4af6-ace5-ae6b727a3b6c"
     },
     {
       "cell_type": "code",
@@ -836,7 +834,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "d09ac906-ac92-4b86-91b9-16d8721c9e63"
+      "id": "c3b421b5-dfa5-4aac-8ae8-3e12aa075599"
     },
     {
       "cell_type": "code",
@@ -868,7 +866,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "7511e1d7-c54b-4135-bb8e-705e5a33998d"
+      "id": "1949d9d9-ef8c-4bf3-9699-f898fc0d41c9"
     },
     {
       "cell_type": "code",
@@ -888,7 +886,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "89e0ed9a-1850-484e-a077-f551543ef1e5"
+      "id": "a9707a34-1999-483a-99c0-5527f21ad8f8"
     },
     {
       "cell_type": "code",
@@ -922,7 +920,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "7fa0d94e-27da-4ddb-9e2c-4e3718060205"
+      "id": "f7f2ca68-48b2-4e57-9bc7-1f44e60dcf93"
     },
     {
       "cell_type": "code",
@@ -943,7 +941,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "620cbbaf-2661-4b51-99c7-48d597d69980"
+      "id": "b6173c62-fa55-4b17-8576-13ac88ecf20d"
     },
     {
       "cell_type": "code",
@@ -975,7 +973,7 @@
       "source": [
         "(update)"
       ],
-      "id": "a57f2f16-4fb0-4249-a4f3-05c663670d3d"
+      "id": "d1fc7369-a0b9-45ef-b851-f811fad4c70d"
     },
     {
       "cell_type": "code",
@@ -995,7 +993,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "abeca98e-e8ad-419f-95b6-65f0f689be4a"
+      "id": "97f6a30d-47ea-46f3-be1d-0067ef0ca8b9"
     },
     {
       "cell_type": "code",
@@ -1027,7 +1025,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "92e55df4-09ed-4dcc-b893-073789e766b9"
+      "id": "5c051ea9-495d-406c-b579-e0cf9eba23df"
     },
     {
       "cell_type": "code",
@@ -1047,7 +1045,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "d2071d9a-21b0-488d-a4e3-3e71e167077d"
+      "id": "a04f5eb6-ba33-4615-bddc-c184f1f023bf"
     },
     {
       "cell_type": "code",
@@ -1079,7 +1077,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "0d125631-78ce-4434-8214-07a99c2787e7"
+      "id": "e192343a-3141-4fb0-97bb-720340548dcf"
     },
     {
       "cell_type": "code",
@@ -1145,7 +1143,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "278b47b7-58a5-468e-b6b0-bf0edde6c9fe"
+      "id": "01c401c9-c4c6-4dda-bfe9-17f23e997adf"
     },
     {
       "cell_type": "code",
@@ -1182,7 +1180,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "3ad961ac-aa00-47c2-9ca6-19351008c904"
+      "id": "d7a39d2f-f0e8-4c87-ae58-d192facff756"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1234,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "85cfb6f2-e0ec-4499-abbe-b5c3c4c3829f"
+      "id": "dc263445-bda8-4a0a-97ef-55efeb007d26"
     },
     {
       "cell_type": "code",
@@ -1256,7 +1254,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "cb2b3c9e-821d-4e0b-9862-16c799ecafa2"
+      "id": "d9093ee4-04fd-411f-8c95-a7028d095d51"
     },
     {
       "cell_type": "code",
@@ -1296,7 +1294,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "78735c6e-cb31-4f83-9679-54b27b50dac1"
+      "id": "0f84cc01-c551-4275-9c30-c62e526591d8"
     },
     {
       "cell_type": "code",
@@ -1320,7 +1318,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "e47c68d5-c8aa-4858-a225-830a4716032f"
+      "id": "5e4def36-0a79-4395-b889-ae9f1f37820a"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1372,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "b8db5c54-365c-4325-822d-07637a061eb0"
+      "id": "7c568df3-4070-44f1-b70e-b2a04f06a72d"
     },
     {
       "cell_type": "code",
@@ -1395,7 +1393,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "38eb859a-eb30-4231-ba45-6539c5b44594"
+      "id": "4cfee624-9412-407e-8616-d9ef4e77d24f"
     },
     {
       "cell_type": "code",
