--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -13,17 +13,33 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/11wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상\n",
-        "\n",
-        "<https://youtu.be/playlist?list=PLQqh36zP38-xl7f2bcPTKMVCe3kHM380M&si=5SO7pni3fXX4kK-4>\n",
-        "\n",
-        "# 2. Imports"
+        "# 1. 강의영상"
       ],
-      "id": "91ccca91-2f39-4549-99d2-307f99b7969b"
+      "id": "7383bb79-a8e7-401f-b5f2-808e776a08bb"
     },
     {
       "cell_type": "code",
       "execution_count": 1,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-xl7f2bcPTKMVCe3kHM380M&si=5SO7pni3fXX4kK-4 >}}"
+      ],
+      "id": "14dd1448-f6d9-4e15-a364-e0c5f4a69148"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 2. Imports"
+      ],
+      "id": "9460744c-d999-4607-a025-44e999d4a1a2"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 301,
       "metadata": {
         "tags": []
       },
@@ -46,7 +62,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "2bfa3968-88b8-4700-a9b2-219225d4476d"
+      "id": "ed57f28e-be9c-4df3-8b86-14ae317a1348"
     },
     {
       "cell_type": "code",
@@ -72,7 +88,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "1ccf7b35-88f4-4be5-9ca9-2aa8cf237986"
+      "id": "40896e91-e7d5-4b8d-9d69-2ad31ec873d9"
     },
     {
       "cell_type": "code",
@@ -97,7 +113,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 “embd” 존재"
       ],
-      "id": "fec67a32-f34a-4347-a699-eaad68e3b9da"
+      "id": "7ea7cf67-808a-4b29-8cd8-798578ec7c77"
     },
     {
       "cell_type": "code",
@@ -149,7 +165,7 @@
         "\n",
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나?"
       ],
-      "id": "84c2c598-bbf3-4d3b-8e89-ad8e76e64ac4"
+      "id": "e408cca1-5aad-442b-af07-4b107a77b2df"
     },
     {
       "cell_type": "code",
@@ -201,7 +217,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "4a3f2f6a-4d86-4eb3-bb8f-62b237cde0de"
+      "id": "2aafa595-787a-4e8c-9857-79b46571a1c7"
     },
     {
       "cell_type": "code",
@@ -247,7 +263,7 @@
         "\n",
         "## B. MF-based 추천시스템 재설계"
       ],
-      "id": "cb328b3a-3958-46c5-a726-4d77e0023041"
+      "id": "fab19f60-9249-4799-b999-6aeeb4ca64fb"
     },
     {
       "cell_type": "code",
@@ -337,7 +353,7 @@
         "\n",
         "`# 예비학습1`: net(x)와 사실 net.forwardx(x)는 같다."
       ],
-      "id": "983ca254-9c80-42c0-a8bb-50d9f8aecd7a"
+      "id": "71b4b40d-4abc-4add-9e7d-3ea7ae50c481"
     },
     {
       "cell_type": "code",
@@ -397,7 +413,7 @@
       "source": [
         "그래서 net.forward를 재정의하면 net(x)의 기능을 재정의 할 수 있다."
       ],
-      "id": "bad78d93-98d2-4b3c-b585-b68572af8f0c"
+      "id": "2f7da5bd-411b-4d11-897b-b6b4ba4e1f4e"
     },
     {
       "cell_type": "code",
@@ -420,7 +436,7 @@
         "-   “net.forward = lambda x:1” 이라고 새롭게 선언하였므로 앞으론\n",
         "    net.forward(x), net(x) 도 입력값에 상관없이 항상 1을 출력하게 될것임"
       ],
-      "id": "029b79ad-d526-4f83-bab5-a1f41857c24d"
+      "id": "23f9a0e7-726c-418d-86ef-f985f58abc23"
     },
     {
       "cell_type": "code",
@@ -458,7 +474,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "99d33462-3aef-464d-9995-6ec82b783ce0"
+      "id": "77d5c01c-4fef-4a54-9f25-e3d8022faac2"
     },
     {
       "cell_type": "code",
@@ -502,7 +518,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "5a727fb9-ec86-41a8-88ab-157d6c391257"
+      "id": "44385bfd-8b0a-4802-befe-38c0db5e2214"
     },
     {
       "cell_type": "code",
@@ -612,7 +628,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "f5123e2b-75af-45c3-a7eb-b9733f69d6d5"
+      "id": "e01a73d2-ee86-4d02-8f54-794b5a2a763f"
     },
     {
       "cell_type": "code",
@@ -656,7 +672,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "98c2ab3f-c922-487e-873a-7d35b89ba4b0"
+      "id": "9c596f86-18d5-4013-a90e-52770e4b7ac0"
     },
     {
       "cell_type": "code",
@@ -766,7 +782,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "22434d65-44bb-4000-8902-a3d86bbdab84"
+      "id": "516b3ceb-f995-466f-b83f-f879696ea086"
     },
     {
       "cell_type": "code",
@@ -806,7 +822,7 @@
         "\n",
         "(풀이1)"
       ],
-      "id": "81f9c1f8-5fa2-47fb-9143-e70fa3ae404f"
+      "id": "6461139c-f3ee-4c78-a868-c96a51e3acc1"
     },
     {
       "cell_type": "code",
@@ -879,7 +895,7 @@
       "source": [
         "(풀이2)"
       ],
-      "id": "18b2087f-bba8-4eb9-9c32-e64273941f36"
+      "id": "82af786a-5c4e-4d92-9ec2-ef747486f19d"
     },
     {
       "cell_type": "code",
@@ -982,7 +998,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "d57e1d7e-96b9-419e-bb30-6b26ae4349a4"
+      "id": "f9df7f0b-ac34-454b-bc4a-f21f09baed41"
     },
     {
       "cell_type": "code",
@@ -1022,7 +1038,7 @@
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "932dea73-f02a-4b4b-91f5-8859c2c05adf"
+      "id": "ff9a158b-654f-44a2-a666-ce82e0ac2bb9"
     },
     {
       "cell_type": "code",
@@ -1100,7 +1116,7 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "2fad0934-fc8a-4be6-98aa-4e17df7755ee"
+      "id": "2920a4d3-c4d9-49c2-89e6-30ea367d0f0c"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1196,7 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "0f5cdbc6-19f0-477f-b551-204226cd9648"
+      "id": "e49402c6-403f-4b0b-9052-b872d86985b1"
     },
     {
       "cell_type": "code",
@@ -1200,7 +1216,7 @@
       "source": [
         "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "f7ddc236-0a1e-4869-9e60-b476b9b6d9e1"
+      "id": "4768d69a-795e-4833-a6b6-aa400c3f3b53"
     },
     {
       "cell_type": "code",
@@ -1241,7 +1257,7 @@
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "dbd2ba69-28ec-4ad1-914f-420558061016"
+      "id": "1b695579-cb2b-46f8-a598-4635f4cc6077"
     }
   ],
   "nbformat": 4,
